//READ THIS IS YOU'RE STRUGGLING TO BUILD
// Make sure your IDE is set up with Java SDK 15. I'm using corretto-15
// Make sure gradle is using the same SDK. This is set in IDEA File|Settings|Build Tools| Gradle


plugins {
    id 'java'
    id 'maven-publish'
    id 'distribution'
}

//DEPENDENCY MANAGEMENT--
repositories {
    jcenter()
    flatDir{
        dirs ("lib")
    }
}

dependencies {
    implementation "org.junit.jupiter:junit-jupiter:5.4.2"
    implementation name:"commons-collections-2.1"
    implementation name: "commons-lang-2.5"
    implementation name: "hec"
    implementation name: "hecnf"
    implementation name: "hecnfPlugin"
    implementation name: "jdom-1.0"
    implementation name: "rma"
    implementation name: "rmadev"
    implementation name: "wat"
    implementation name: "watModel"
    implementation 'org.apache.commons:commons-math3:3.5'
}

//TESTING--
test{
    useJUnitPlatform()
    testLogging{
        test {
            testLogging {
                events "PASSED","FAILED", "SKIPPED"
            }
        }
    }
}
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

//PUBLISHING--
group = "mil.army.usace.hec"
version "1.0"

distributions {
    main {
        distributionBaseName = 'ConfidenceBuilderPlugin'
        contents {
            from 'src/WATPluginMarketplaceConfig'
            from 'build/libs'
        }
    }
}

jar {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    manifest {
        attributes "WatPluginMainClass": "ConfidenceBuilderPlugin"
    }
}

publishing {
    publications {
        ConfidenceBuilderArtifact(MavenPublication) {
            from components.java
            artifact distZip

        }
    }
    repositories {
        maven {
            def releasesRepoUrl = "https://www.hec.usace.army.mil/nexus/repository/WAT_Plugins/"
            def snapshotsRepoUrl = "https://www.hec.usace.army.mil/nexus/repository/WAT_Plugins/"
            url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
        }
    }
}
publish.dependsOn jar
